# inspector_ws

./: README.md
frank/: CMakeLists.txt  README.md  package.xml
frank/Data/: Path_Calib_profi-12-13.txt  Path_Calib_profi_avanti_indietro copy.txt  Path_Calib_profi_avanti_indietro.txt  Path_Calib_profi_rack.txt  calib_profi_2.txt  calib_timestamp.txt  calib_timestamp2.txt  dense_scan_3_12.txt  drill_tcp_pose.txt  path_all_piece.txt  profi_tcp_pose.txt  punti_e_quat30_11.txt  punti_e_quat30_11_a.txt  punti_e_quatDense.txt  punti_e_quatall_31_11.txt  pythonodestruct.txt
frank/config/: Reference_systems.yaml
frank/include/: DataSync.py  Frank3DCamera.py  FrankAlign.py  FrankCamera.py  FrankCommons.py  FrankPLC.py  FrankProfilometer.py  FrankProfilometer_old.py  FrankRobot.py  FrankUtilities.py  MANUAL_PICK.py  abb.py  cv_bridge_my.py  points_to_pc2.py  syncronizer.py  tewst copy.py
frank/include/REGISTRATION/: ICP_utils.py  PC_registration.py  README.MD  helpers.py
frank/include/STEP_ANALYSIS/: README.MD  STEPAnalyzer.py  STEPMesher.py  utils_STEP.py
frank/include/UTILS/: CalibrationUtils.py  FrankCommons.py  FrankUtilities.py  pc2_numpy.py  pcd_numpy_utils.py
frank/launch/: Frank.launch
frank/msg/: OperationState.msg  baseStruct.msg  cluster.msg  profiles_msg.msg  structArray.msg
frank/scripts/: ReachCheck_client.py  Services.py  Trajectory_pub.py  Util.py  irb4600IK.py  test_whole_pipeline.py
frank/src/: camera2d_node.py  camera3d_node.py  camera3d_node_x36.py  manual_node.py  master_node.py  plc_node.py  pose_pub_2.cpp  profilometer_node.py  rangeImage_client.cpp  rangeImage_services.cpp  rangeimage_node.cpp  rangeimage_subscriber.cpp  rws_node.cpp  step_align_node.py  trigger_reader.py  updateDrillServices.cpp
frank/srv/: CommandPLC.srv  Connect2DCamera.srv  DenseAlignment.srv  Disconnect3DCamera.srv  ExtractionAndClustering.srv  GenerateRangeImage.srv  GetPose.srv  GoToPose.srv  Grab2DImage.srv  Grab3DPointcloud.srv  Grab3DPointcloudx36.srv  InitProfi.srv  PLCToolInfo.srv  PathPlan.srv  ReachCheck.srv  ReadPLC.srv  RequestSaveProfi.srv  SaveSparseScan.srv  SendSparseScan.srv  SparseAlignment.srv  StartProfi.srv  StateReq.srv  UpdateDrillTCP.srv  UpdateRackLayout.srv
